# EnAmy-TTS

./: .gitignore  Cargo.toml  README.md
HotelBookingAPI/: HotelBookingAPI.sln
HotelBookingAPI/HotelBookingAPI/: HotelBookingAPI.csproj  HotelBookingAPI.http  Program.cs
HotelBookingAPI/HotelBookingAPI/Controllers/: HotelBookingController.cs
HotelBookingAPI/HotelBookingAPI/Data/: ApiContext.cs
HotelBookingAPI/HotelBookingAPI/Models/: HotelBooking.cs
HotelBookingAPI/HotelBookingAPI/Properties/: launchSettings.json
src/: main.rs
ui/: app-window.slint
