[package]
name = "enamy-tts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
ruget = "0.5.0"
curl = "0.4.47"
serde = "1.0.217"
regex = "1.11.1"
dirs = "6.0.0"
serde_json = "1.0.138"
i-slint-backend-selector = "=1.9.2"

[build-dependencies]
slint-build = "1.8.0"
